<resources>
    <string name="app_name">EnviroSense</string>
    <string name="txt_title_login">Ingresa con tus datos o tu correo</string>
    <string name="input_user">lombook@gmail.com</string>
    <string name="input_pass">**********</string>
    <string name="txt_login_google">Continua con Google</string>
    <string name="txt_message_register">¿No tienes cuenta?</string>
    <string name="btn_register">Regístrate</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_return">Regresar</string>
    <string name="title_activity_selector">activity_selector</string>
    <string name="txt_selector">Selecciona</string>
    <string name="txt_message_selector">¿Qué métrica deseas ver?</string>
    <string name="button">Button</string>
    <string name="txt_back">Volver</string>
    <string name="txt_exit">Salir</string>
    <string name="txt_title_register">Regístrate</string>
    <string name="txt_name">Name:</string>
    <string name="txt_email">Email:</string>
    <string name="txt_pass">Password:</string>
    <string name="txt_confirm_pass">Confirm password:</string>
    <string name="google_storage_bucket" translatable="false">data-sensor-1c4a7.firebasestorage.app</string>
</resources>