<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaves"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/rectangle_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rectangle_light_green"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/intel_regular"
            android:gravity="center"
            android:text="@string/txt_title_register"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/intel_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:text="@string/txt_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_light_gray"
            android:fontFamily="@font/intel_regular"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/intel_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/txt_email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_light_gray"
            android:fontFamily="@font/intel_regular"
            android:hint="@string/input_user"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/intel_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:text="@string/txt_pass"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_light_gray"
            android:fontFamily="@font/intel_regular"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/intel_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:text="@string/txt_confirm_pass"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_light_gray"
            android:fontFamily="@font/intel_regular"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_green"
                android:contentDescription="@string/button"
                android:fontFamily="@font/intel_regular"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_gray"
                android:contentDescription="@string/button"
                android:fontFamily="@font/intel_regular"
                android:text="@string/btn_return"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>